# CrossModalRAG

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml
scripts/: distill_gate.py  generate_xmodal_fixtures.py  remove_synthetic_seed_data.py  xmodal_gate.py
scripts/spikes/: README.md  clip_dual_space_spike.py
src/crossmodalrag/: __init__.py  capabilities.py  chat.py  chunking.py  cli.py  config.py  db.py  evaluation.py  generation_eval.py  modality.py  progress.py  sample_data.py  service.py
src/crossmodalrag/api/: __init__.py  app.py
src/crossmodalrag/api/static/: index.html
src/crossmodalrag/api/static/assets/: index-1xPq7y47.css  index-B8InFI1g.css  index-BH_XrMMh.css  index-BLUuKSv4.css  index-BTTvaK-e.css  index-BiZCz9f2.js  index-BxlwKn7K.js  index-C-iHf4Yq.js  index-C0LVYqnP.css  (+14 more)
src/crossmodalrag/conversations/: __init__.py  contract.py  naming.py  recorder.py  resume.py  store.py
src/crossmodalrag/embed/: __init__.py  provider.py  store.py
src/crossmodalrag/generate/: answer.py  provider.py  synthesize.py
src/crossmodalrag/ingest/: _embed.py  git.py  image.py  notes.py  pdf.py
src/crossmodalrag/memory/: __init__.py  concepts.py  distill.py  drift.py  episodes.py  extract.py  forgetting.py  graph.py  integrity.py  recall.py  store.py
src/crossmodalrag/retrieve/: decompose.py  distilled.py  hybrid.py  lexical.py  nodes.py  rerank.py  vector.py
src/crossmodalrag/usage/: __init__.py  store.py  strength.py  tracking.py
tests/: conftest.py  test_api.py  test_capabilities.py  test_chat.py  test_chunking.py  test_cli_chat.py  test_cli_drift_distill_surface.py  test_cli_hardening.py  test_cli_history.py  test_cli_ingest_path_resolution.py  test_comparative_decomposition.py  test_config_and_backup.py  test_conversations_naming_resume.py  test_conversations_recorder.py  test_conversations_store.py  test_cross_modal_retrieval.py  test_distill.py  test_distill_drift_scaffold.py  test_drift.py  test_embeddings.py  test_eval_levels.py  test_eval_query_validation.py  test_evaluation_harness.py  test_forgetting.py  test_generation.py  test_ingest_fingerprinting.py  test_ingest_git_edge_cases.py  test_ingest_image.py  test_ingest_notes_date.py  test_ingest_pdf.py  test_json_contracts.py  test_llm_keepalive_timing.py  test_memory_concepts.py  test_memory_cross_modal.py  test_memory_episodes.py  test_memory_extract.py  test_memory_graph.py  test_memory_repair.py  test_memory_substrate.py  test_modality.py  (+11 more)
tests/fixtures/git/: empty_diff_commit_message.txt  non_utf_commit_message_latin1.txt
tests/fixtures/sample_seed/: git_commit_plan.json
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  api.ts  chat.tsx  main.tsx  markdown.test.tsx  markdown.tsx  settings-view.tsx  settings.ts  styles.css  views.tsx
(+5 files in other folders)
