[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossmodalrag"
version = "0.1.0"
description = "Local-first foundation for a cross-modal memory distillation engine."
readme = "README.md"
# 3.11+ for stdlib tomllib (the config file). Core remains dependency-free.
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
embeddings = ["fastembed>=0.3", "numpy>=1.24"]
# Cross-modal ingestion. Each modality is opt-in so the core stays
# dependency-free; absent extras degrade gracefully (see crossmodalrag.capabilities).
pdf = ["pypdf>=4.0"]
ocr = ["pytesseract>=0.3", "pillow>=10.0"]
# Native (CLIP-class) image embeddings: gated, only adopted on measured benefit.
image-embeddings = ["fastembed>=0.3", "numpy>=1.24"]
# Local HTTP API (`mem serve`): the boundary the web UI calls.
# Opt-in so the core stays dependency-free; `httpx` powers FastAPI's TestClient.
ui = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]

[project.scripts]
mem = "crossmodalrag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the built web UI (served by `mem serve` with the [ui] extra).
"crossmodalrag.api" = ["static/**/*"]
